packages/next-swc/crates/core/tests/errors/server-actions/server-graph/8/output.js
/* __next_internal_action_entry_do_not_use__ $$ACTION_1 */ import __create_action_proxy__ from "private-next-rsc-action-proxy";
const foo = ($$ACTION_0 = async (...args)=>$$ACTION_1.apply(null, ($$ACTION_0.$$bound || []).concat(args)), __create_action_proxy__("188d5d945750dc32e2c842b93c75a65763d4a922", null, $$ACTION_0, $$ACTION_1), $$ACTION_0);
export const $$ACTION_1 = async ()=>{
    'use strict';
};
var $$ACTION_0;
const bar = async ()=>{
    const x = 1;
    // prettier-ignore
    'use server';
};
